<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:background="@drawable/grd_bg"
    >

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        style="@style/botones"
        />

    <Button
        android:id="@+id/btnLibrerias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/llibreries"
        android:layout_below="@+id/btnPerfil"
        style="@style/botones"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/btnActividades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activitats"
        android:layout_below="@+id/btnLibrerias"
        style="@style/botones"
        android:layout_marginTop="30dp"
        />

</RelativeLayout>