<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/grd_bg"
    >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="115dp"
        android:src="@drawable/logo_sgv"
        />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivLogo"
        android:layout_marginTop="40dp"
        android:hint="@string/example"
        style="@style/campo"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCorreo"
        android:hint="@string/paswd"
        android:inputType="textPassword"
        style="@style/campo"
        />

    <Button
        android:id="@+id/btnLoguear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:text="Login"
        style="@style/botones"
        />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        android:text="@string/registrarse"
        android:alpha="0.8"
        android:textSize="12sp"
        android:padding="5dp"
        />

</RelativeLayout>